Solved problem with chart in profile
When the screen was minimized to 90% multiple times, the graph would minimize until it was invisible.

The container has been made fixed, and in this way, the graph is always static without modifying its size until it is minimized to a certain screen width.

--- a/Phase2/EventCrafters/src/main/resources/static/css/profile.css
+++ b/Phase2/EventCrafters/src/main/resources/static/css/profile.css
@@ -427,9 +427,12 @@ becomes the last one in its parent element
 }
 
 #charts-container {
-    width: 30%;
-    margin: 20px auto 20px;
+    width: 300px;
+    height: 300px;
+    margin: 20px auto;
+    margin-bottom: 40px;
 }
+
 #ban-user-form {
     text-align: center;
 }
